--- a/SDL_GetWindowWMInfo.mediawiki
+++ b/SDL_GetWindowWMInfo.mediawiki
@@ -17,7 +17,7 @@ SDL_bool SDL_GetWindowWMInfo(SDL_Window*    window,
 |the window about which information is being requested
 |-
 |'''info'''
-|a pointer to a structure that gets filled in; see [[#Remarks|Remarks]] for details
+|a pointer to an [[SDL_SysWMinfo]] structure that is filled in with window information; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
