--- a/CategoryVideo.mediawiki
+++ b/CategoryVideo.mediawiki
@@ -14,14 +14,14 @@
 This category contains functions for handling display, window, and rendering actions.
 
 == Enumerations ==
-<<FullSearch(category:CategoryEnum CategoryVideo)>>
+<<FullSearchCached(category:CategoryEnum CategoryVideo)>>
 
 == Structures ==
-<<FullSearch(category:CategoryStruct CategoryVideo)>>
+<<FullSearchCached(category:CategoryStruct CategoryVideo)>>
 
 == Functions ==
 
-<<FullSearch(category:CategoryVideo -CategoryEnum -CategoryStruct)>>
+<<FullSearchCached(category:CategoryVideo -CategoryEnum -CategoryStruct)>>
 
 ----
 CategoryCategory
