--- a/SDL_SysWMmsg.mediawiki
+++ b/SDL_SysWMmsg.mediawiki
@@ -3,18 +3,18 @@
 '''DRAFT'''
 
 = SDL_SysWMmsg =
-A structure that contains <code>system-dependent window manager messages</code> ''-or-'' <code>platform-specific windowing messages</code>.
+A structure that contains system-dependent window manager messages.
 
 
 == Data Fields ==
 {|
 |
 |
-|''For Win32 window management systems (Windows)''
+|''For Windows''
 |-
 |SDL_version
 |'''version'''
-|<code>a field you fill in before you call a function</code>
+|an [[SDL_version]] structure that contains the current SDL version
 |-
 |HWND
 |'''hwnd'''
@@ -38,19 +38,15 @@ A structure that contains <code>system-dependent window manager messages</code> 
 |-
 |SDL_version
 |'''version'''
-|<code>a version field you fill in before you call a function</code>
+|an [[SDL_version]] structure that contains the current SDL version
 |-
 |SDL_SYSWM_TYPE
 |'''subsystem'''
-|^the window manager type^; see [[#Remarks|Remarks]] for details
+|the windowing system type; see [[#Remarks|Remarks]] for details
 |-
-|union ???
-|'''event'''
-|<code>a union containing XEvent</code>
-|-
-|XEvent ???
+|XEvent
 |'''event.xevent'''
-|<code>the native x11 event structure</code>
+|the native x11 event structure
 |}
 
 
@@ -60,12 +56,9 @@ You can add your code example here
 ```
 
 == Remarks ==
-'''SDL_SYSWM_TYPE''' currently has only 1 value: <code>SDL_SYSWM_X11</code>
+SDL_SYSWM_TYPE may be one of the following:
+<<Include(SDL_SysWMinfo, , , from="of SDL_SYSWM_TYPE.", to="== Related Functions ==")>>
 
-== Related Structures ==
-:[[SDL_SysWMinfo]]
-
-== Related Functions ==
 
 ----
 [[CategoryStruct]], [[CategorySWM]]
