--- a/SDL_GetRGBA.mediawiki
+++ b/SDL_GetRGBA.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_GetRGBA =
 Use this function to get RGBA values from a pixel in the specified format.
@@ -43,16 +42,14 @@ You can add your code example here
 ```
 
 == Remarks ==
-*<br/>This function uses the entire 8-bit [0..255] range when converting color components from pixel formats with less than 8-bits per RGB component (e.g., a completely white pixel in 16-bit RGB565 format would return [0xff, 0xff, 0xff] not [0xf8, 0xfc, 0xf8]).
+This function uses the entire 8-bit [0..255] range when converting color components from pixel formats with less than 8-bits per RGB component (e.g., a completely white pixel in 16-bit RGB565 format would return [0xff, 0xff, 0xff] not [0xf8, 0xfc, 0xf8]).
 
-If the surface has no alpha component, the alpha will be returned as 0xff (100% opaque).<br/>*
-
-<<Color2(green,Should the alphas above be '''a''' instead?)>>
+If the surface has no alpha component, the alpha will be returned as 0xff (100% opaque).
 
 == Related Functions ==
 :[[SDL_GetRGB]]
-:[[SDL_MapRGB]] *
-:[[SDL_MapRGBA]] *
+:[[SDL_MapRGB]]
+:[[SDL_MapRGBA]]
 
 ----
 [[CategoryAPI]], [[CategoryPixels]]
