--- a/SDL_MapRGB.mediawiki
+++ b/SDL_MapRGB.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_MapRGB =
 Use this function to map an RGB triple to an opaque pixel value for a given pixel format.
@@ -30,16 +29,7 @@ Uint32 SDL_MapRGB(const SDL_PixelFormat* format,
 |}
 
 == Return Value ==
-Returns a pixel value.
-
-*<br/>^This function^ Maps the RGB color value to the specified pixel format and returns the pixel value as a 32-bit int best approximating the given RGB color value for the given pixel format.
-
-If the format has a palette (8-bit) the index of the closest matching color in the palette will be returned.
-
-If the specified pixel format has an alpha component it will be returned as all 1 bits (fully opaque).
-
-<<Color2(green,Does this next part belong in Remarks instead?)>>
-If the pixel format bpp (color depth) is less than 32-bpp then the unused upper bits of the return value can safely be ignored (e.g., with a 16-bpp format the return value can be assigned to a Uint16, and similarly a Uint8 for an 8-bpp format).<br/>*
+Returns a pixel value; see [[#Remarks|Remarks]] for details.
 
 == Code Examples ==
 ```c++
@@ -47,11 +37,17 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+This function maps the RGB color value to the specified pixel format and returns the pixel value best approximating the given RGB color value for the given pixel format.
+
+If the format has a palette (8-bit) the index of the closest matching color in the palette will be returned.
+
+If the specified pixel format has an alpha component it will be returned as all 1 bits (fully opaque).
+
+If the pixel format bpp (color depth) is less than 32-bpp then the unused upper bits of the return value can safely be ignored (e.g., with a 16-bpp format the return value can be assigned to a Uint16, and similarly a Uint8 for an 8-bpp format).
 
 == Related Functions ==
-:[[SDL_GetRGB]] *
-:[[SDL_GetRGBA]] *
+:[[SDL_GetRGB]]
+:[[SDL_GetRGBA]]
 :[[SDL_MapRGBA]]
 
 ----
