--- a/SDL_MapRGBA.mediawiki
+++ b/SDL_MapRGBA.mediawiki
@@ -34,9 +34,7 @@ Uint32 SDL_MapRGBA(const SDL_PixelFormat* format,
 |}
 
 == Return Value ==
-Returns a *32-bit* pixel value.
-
-If the format has a palette (8-bit) the index of the closest matching color in the palette will be returned.
+Returns a pixel value; see [[#Remarks|Remarks]] for details.
 
 == Code Examples ==
 ```c++
@@ -44,13 +42,11 @@ You can add your code example here
 ```
 
 == Remarks ==
-*<br/>If the specified pixel format has no alpha component the alpha value will be ignored (as it will be in formats with a palette). <br/>*
+If the specified pixel format has no alpha component the alpha value will be ignored (as it will be in formats with a palette).
 
 This function maps the RGB color value to the specified pixel format and returns the pixel value best approximating the given RGB color value for the given pixel format.
 
 If the format has a palette (8-bit) the index of the closest matching color in the palette will be returned.
-
-If the specified pixel format has an alpha component it will be returned as all 1 bits (fully opaque).
 
 If the pixel format bpp (color depth) is less than 32-bpp then the unused upper bits of the return value can safely be ignored (e.g., with a 16-bpp format the return value can be assigned to a Uint16, and similarly a Uint8 for an 8-bpp format). 
 
