update content (w/ Sam); remove 'draft' note

--- a/SDL_MapRGBA.mediawiki
+++ b/SDL_MapRGBA.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_MapRGBA =
 Use this function to map an RGBA quadruple to a pixel value for a given pixel format.
@@ -42,17 +41,17 @@ You can add your code example here
 ```
 
 == Remarks ==
-If the specified pixel format has no alpha component the alpha value will be ignored (as it will be in formats with a palette).
+This function maps the RGBA color value to the specified pixel format and returns the pixel value best approximating the given RGBA color value for the given pixel format.
 
-This function maps the RGB color value to the specified pixel format and returns the pixel value best approximating the given RGB color value for the given pixel format.
+If the specified pixel format has no alpha component the alpha value will be ignored (as it will be in formats with a palette).
 
 If the format has a palette (8-bit) the index of the closest matching color in the palette will be returned.
 
 If the pixel format bpp (color depth) is less than 32-bpp then the unused upper bits of the return value can safely be ignored (e.g., with a 16-bpp format the return value can be assigned to a Uint16, and similarly a Uint8 for an 8-bpp format). 
 
 == Related Functions ==
-:[[SDL_GetRGB]] *
-:[[SDL_GetRGBA]] *
+:[[SDL_GetRGB]]
+:[[SDL_GetRGBA]]
 :[[SDL_MapRGB]]
 
 ----
