--- a/SDL_EnclosePoints.mediawiki
+++ b/SDL_EnclosePoints.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_EnclosePoints =
 Use this function to calculate a minimal rectangle enclosing a set of points.
@@ -17,16 +16,16 @@ SDL_bool SDL_EnclosePoints(const SDL_Point* points,
 == Function Parameters ==
 {|
 |'''points'''
-|the points to be enclosed
+|a pointer to an array of [[SDL_Points]] to be enclosed
 |-
 |'''count'''
 |the number of points
 |-
 |'''clip'''
-|a pointer to the [[SDL_Rect]] to be enclosed
+|an optional rectangle ([[SDL_Rect]]); see [[#Remarks|Remarks]]
 |-
 |'''result'''
-|the [[SDL_Rect]] to be created
+|a pointer to an [[SDL_Rect]] to be filled in
 |}
 
 == Return Value ==
