--- a/SDL_EnclosePoints.mediawiki
+++ b/SDL_EnclosePoints.mediawiki
@@ -22,10 +22,10 @@ SDL_bool SDL_EnclosePoints(const SDL_Point* points,
 |the number of points
 |-
 |'''clip'''
-|an optional rectangle ([[SDL_Rect]]); see [[#Remarks|Remarks]]
+|an optional rectangle ([[SDL_Rect]]); see [[#Remarks|Remarks]] for details
 |-
 |'''result'''
-|a pointer to an [[SDL_Rect]] to be filled in
+|a pointer to a [[SDL_Rect|rectangle]] to be filled in
 |}
 
 == Return Value ==
