--- a/SDL_EnclosePoints.mediawiki
+++ b/SDL_EnclosePoints.mediawiki
@@ -16,41 +16,13 @@ SDL_bool SDL_EnclosePoints(const SDL_Point* points,
 == Function Parameters ==
 {|
 |'''points'''
-|a pointer to an array of [[SDL_Point]] structures to be enclosed
+|a pointer to an array of [[SDL_Point]] structures representing points to be enclosed
 |-
 |'''count'''
-|the number of points
+|the number of structures in the '''points''' array
 |-
 |'''clip'''
-|an optional [[SDL_Rect]]; see [[#Remarks|Remarks]] for details
-|-
-|'''result'''
-|a pointer to an [[SDL_Rect]] to be filled in
-|}
-<br/>
-{|
-|'''points'''
-|a pointer to an array of [[SDL_Point]]s to be enclosed
-|-
-|'''count'''
-|the number of points
-|-
-|'''clip'''
-|an optional [[SDL_Rect]]; see [[#Remarks|Remarks]] for details
-|-
-|'''result'''
-|a pointer to an [[SDL_Rect]] to be filled in
-|}
-<br/>
-{|
-|'''points'''
-|a pointer to an array of [[SDL_Point]] points to be enclosed
-|-
-|'''count'''
-|the number of points
-|-
-|'''clip'''
-|an optional [[SDL_Rect]]; see [[#Remarks|Remarks]] for details
+|an [[SDL_Rect]] used for clipping or NULL to enclose all points; see [[#Remarks|Remarks]] for details
 |-
 |'''result'''
 |a pointer to an [[SDL_Rect]] to be filled in
@@ -58,9 +30,7 @@ SDL_bool SDL_EnclosePoints(const SDL_Point* points,
 
 
 == Return Value ==
-Returns SDL_TRUE if any points were within the clipping rect. 
-
-<<Color2(green,What does it do if there are no points within the clipping rect?)>>
+Returns SDL_TRUE if any points were enclosed or SDL_FALSE if all the points were outside of the clipping rectangle.
 
 == Code Examples ==
 ```c++
@@ -68,10 +38,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
-
-== Related Functions ==
-:[[SDL_OtherFunction]]
+If '''clip''' is not NULL then only points inside of the clipping rectangle are considered.
 
 ----
 [[CategoryAPI]], [[CategoryRect]]
