--- a/SDL_Point.mediawiki
+++ b/SDL_Point.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_Point =
-A structure that contains ^the definition / location of a point^.
+A structure that defines a point.
 
 
 == Data Fields ==
@@ -27,7 +26,7 @@ You can add your code example here
 
 
 == Related Structures ==
-
+:[[SDL_Rect]]
 
 == Related Functions ==
 :[[SDL_EnclosePoints]]
