--- a/SDL_RectEmpty.mediawiki
+++ b/SDL_RectEmpty.mediawiki
@@ -1,39 +1,23 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_RectEmpty =
-Use this function to ^report if a rectangle has no area^.
-
-<<Color2(green,Is this one of those macros that should be labeled as a macro?  ie: the above would read "Use this macro to..." instead.)>>
+Use this function to check whether a rectangle has no area.
 
 
 == Syntax ==
 ```c++
-SDL_RectEmpty(X)
-```
-
-<<Color2(green,If this returns a boolean should it show a boolean return value type?  If it is referring to a specific rectangle wouldn't that be one of the params?  Below is possible alternate syntax.)>>
-
-```c++
-SDL_bool SDL_RectEmpty(SDL_Rect* rect)
+SDL_bool SDL_RectEmpty(const SDL_Rect* rect)
 ```
 
 == Function Parameters ==
 {|
-|'''X'''
-|(((X)->w <= 0) 
-| ((X)->h <= 0))
-|}
-
-<<Color2(green,Alt params to go with above alt syntax:)>>
-{|
 |'''rect'''
-|the [[SDL_Rect]] to query for size; see [[#Remarks|Remarks]] for details
+|the [[SDL_Rect]] to check
 |}
 
 == Return Value ==
-Returns ^SDL_TRUE^ if the rectangle has no area ^or SDL_FALSE if it does; see [[#Remarks|Remarks]] for details^.
+Returns SDL_TRUE if the rectangle has no area or SDL_FALSE if it does; see [[#Remarks|Remarks]] for details.
 
 == Code Examples ==
 ```c++
@@ -41,13 +25,8 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+If the rectangle defined by '''rect''' has an <code>w</code> or <code>h</code> value <= 0 it has no area and this function returns SDL_TRUE.  If both values are > 0 the rectangle has area and this function returns SDL_FALSE.
 
-<<Color2(green,There must be a reference to [[SDL_Rect]] here somewhere but I'm not sure where or how to put it.  Below is possible text to go with the above alternates.)>>
-
-If the rectangle defined/described by '''rect''' has an <code>x</code> or <code>y</code> value <=0 it has no area and this function returns SDL_TRUE.  If both values are >0 the rectangle has area and this function returns SDL_FALSE.
-
-== Related Functions ==
 
 ----
 [[CategoryAPI]], [[CategoryRect]]
