update content (w/ Sam)

--- a/SDL_RectEmpty.mediawiki
+++ b/SDL_RectEmpty.mediawiki
@@ -25,7 +25,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-If the rectangle defined by '''rect''' has an <code>w</code> or <code>h</code> value <= 0 it has no area and this function returns SDL_TRUE.  If both values are > 0 the rectangle has area and this function returns SDL_FALSE.
+If the rectangle defined by '''rect''' has a width or height <= 0 it has no area and this function returns SDL_TRUE.  If both width and height are > 0 the rectangle has area and this function returns SDL_FALSE.
 
 
 ----
