--- a/CategorySWM.mediawiki
+++ b/CategorySWM.mediawiki
@@ -13,6 +13,10 @@ This category contains functions for handling advanced, platform-specific window
 
 Your application has access to a special type of event, SDL_SYSWMEVENT, which uses the [[SDL_SysWMmsg]] structure and contains window-manager specific information.  This arrives whenever an unhandled window event occurs.  This event is ignored by default, but you can enable it with [[SDL_EventState]]().
 
+== Enumerations ==
+<<FullSearch(category:CategoryEnum CategorySWM)>>
+
+
 == Structures ==
 <<FullSearch(category:CategoryStruct CategorySWM)>>
 
