--- a/SDL_SysWMmsg.mediawiki
+++ b/SDL_SysWMmsg.mediawiki
@@ -21,7 +21,7 @@ A structure that contains system-dependent window manager messages.
 |the type of message ''-or'' ^the message to display^
 |}
 
-<<Color2(green,Below is old content temporarily here for reference.)>>
+<<Color2(green,Below is old content temporarily here for reference only.)>>
 {|
 |
 |
@@ -71,7 +71,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-SDL_SYSWM_TYPE may be one of the following:
+[[SDL_SYSWM_TYPE]] may be one of the following:
 <<Include(SDL_SYSWM_TYPE, , , from="== Values ==", to="== Code Examples ==")>>
 
 
