--- a/SDL_SysWMinfo.mediawiki
+++ b/SDL_SysWMinfo.mediawiki
@@ -8,6 +8,21 @@ A structure that contains system-dependent information about a window.
 
 == Data Fields ==
 {|
+|SDL_version
+|'''version'''
+|an [[SDL_version]] structure that contains the current SDL version
+|-
+|SDL_SYSWM_TYPE
+|'''subsystem'''
+|the windowing system type; see [[#Remarks|Remarks]] for details
+|-
+|union
+|'''info'''
+|^the type of window^; see [[#Remarks|Remarks]] for details
+|}
+
+<<Color2(green,Below is old content temporarily here for reference only.)>>
+{|
 |
 |
 |''For Windows''
@@ -47,15 +62,13 @@ You can add your code example here
 ```
 
 == Remarks ==
-''For X11 window management systems (Unix)''
+--(''For X11 window management systems (Unix)'')--
 
 This structure is filled in by [[SDL_GetWindowWMInfo]]().
 
-When [[SDL_GetWindowWMInfo]]() returns the structure holds information specific to the low level windowing system being used, which is one of SDL_SYSWM_TYPE.
-{|
-|SDL_SYSWM_X11
-|the X11 windowing system
-|}
+When this structure is returned, it holds information about which low level system it is using, and ^'''info'''^ will be one of [[SDL_SYSWM_TYPE]]:
+<<Include(SDL_SYSWM_TYPE, , , from="== Values ==", to="== Code Examples ==")>>
+
 
 == Related Functions ==
 :[[SDL_GetWindowWMInfo]]
