--- a/SDL_SysWMinfo.mediawiki
+++ b/SDL_SysWMinfo.mediawiki
@@ -10,7 +10,7 @@ A structure that contains system-dependent information about a window.
 {|
 |
 |
-|''For All Subsystems''
+|''All Subsystems''
 |-
 |SDL_version
 |'''version'''
@@ -22,23 +22,47 @@ A structure that contains system-dependent information about a window.
 |-
 |
 |
-|''For SDL_SYSWM_WINDOWS''
+|''SDL_SYSWM_WINDOWS''
 |-
 |HWND
-|'''window'''
-|the Win32 display window
+|'''win.window'''
+|the window handle
 |-
 |
 |
-|''For SDL_SYSWM_X11''
+|''SDL_SYSWM_X11''
 |-
-|Display
-|'''info.x11.display'''
+|Display*
+|'''x11.display'''
 |the X11 display
 |-
 |Window
-|'''info.x11.window'''
+|'''x11.window'''
 |the X11 window
+|-
+|
+|
+|''SDL_SYSWM_DIRECTFB''
+|-
+|IDirectFB*
+|'''dfb.dfb'''
+|the DirectFB main interface
+|-
+|IDirectFBWindow*
+|'''dfb.window'''
+|the DirectFB window handle
+|-
+|IDirectFBSurface*
+|'''dfb.surface'''
+|the DirectFB client surface
+|-
+|
+|
+|''SDL_SYSWM_COCOA''
+|-
+|NSWindow*
+|'''cocoa.window'''
+|the Cocoa window
 |}
 
 == Code Examples ==
