update content (w/ Sam); remove 'draft' note

--- a/SDL_SysWMinfo.mediawiki
+++ b/SDL_SysWMinfo.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_SysWMinfo =
 A structure that contains system-dependent information about a window.
@@ -73,7 +72,7 @@ You can add your code example here
 == Remarks ==
 This structure is filled in by [[SDL_GetWindowWMInfo]]().
 
-When this structure is filled in it holds information about the window and '''subsystem''' will be one of [[SDL_SYSWM_TYPE]] corresponding to the windowing system in use:
+This structure holds information about the window and '''subsystem''' is one of [[SDL_SYSWM_TYPE]] corresponding to the windowing system in use:
 <<Include(SDL_SYSWM_TYPE, , , from="== Values ==", to="== Code Examples ==")>>
 
 
