--- a/SDL_SysWMinfo.mediawiki
+++ b/SDL_SysWMinfo.mediawiki
@@ -15,7 +15,7 @@ A structure that contains system-dependent information about a window.
 |'''version'''
 |an [[SDL_version]] structure that contains the current SDL version
 |-
-|SDL_SYSWM_TYPE
+|[[SDL_SYSWM_TYPE]]
 |'''subsystem'''
 |the windowing system type; see [[#Remarks|Remarks]] for details
 |-
@@ -72,7 +72,7 @@ You can add your code example here
 == Remarks ==
 This structure is filled in by [[SDL_GetWindowWMInfo]]().
 
-This structure holds information about the window and '''subsystem''' is one of [[SDL_SYSWM_TYPE]] corresponding to the windowing system in use:
+This structure holds low level information about the window and '''subsystem''' is set to the windowing system in use, one of:
 <<Include(SDL_SYSWM_TYPE, , , from="== Values ==", to="== Code Examples ==")>>
 
 
