--- a/SDL_SysWMmsg.mediawiki
+++ b/SDL_SysWMmsg.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_SysWMmsg =
 A structure that contains system-dependent window manager messages.
@@ -8,6 +7,10 @@ A structure that contains system-dependent window manager messages.
 
 == Data Fields ==
 {|
+|
+|
+|''All Subsystems''
+|-
 |SDL_version
 |'''version'''
 |an [[SDL_version]] structure that contains the current SDL version
@@ -16,52 +19,41 @@ A structure that contains system-dependent window manager messages.
 |'''subsystem'''
 |the windowing system type; see [[#Remarks|Remarks]] for details
 |-
-|union
-|'''msg'''
-|the type of message ''-or'' ^the message to display^
-|}
-
-<<Color2(green,Below is old content temporarily here for reference only.)>>
-{|
 |
 |
-|''For Windows''
-|-
-|SDL_version
-|'''version'''
-|an [[SDL_version]] structure that contains the current SDL version
+|''SDL_SYSWM_WINDOWS''
 |-
 |HWND
-|'''hwnd'''
+|'''win.hwnd'''
 |the window for the message
 |-
 |UINT
-|'''msg'''
+|'''win.msg'''
 |the type of message
 |-
 |WPARAM
-|'''wParam'''
+|'''win.wParam'''
 |WORD message parameter
 |-
 |LPARAM
-|'''lParam'''
+|'''win.lParam'''
 |LONG message parameter
 |-
 |
 |
-|''For X11 window management systems (Unix)''
-|-
-|SDL_version
-|'''version'''
-|an [[SDL_version]] structure that contains the current SDL version
-|-
-|SDL_SYSWM_TYPE
-|'''subsystem'''
-|the windowing system type; see [[#Remarks|Remarks]] for details
+|''SDL_SYSWM_X11''
 |-
 |XEvent
-|'''event.xevent'''
+|'''x11.event'''
 |the native x11 event structure
+|-
+|
+|
+|''SDL_SYSWM_DIRECTFB''
+|-
+|DFBEvent
+|'''dfb.event'''
+|the DirectFB event
 |}
 
 
@@ -71,9 +63,10 @@ You can add your code example here
 ```
 
 == Remarks ==
-[[SDL_SYSWM_TYPE]] may be one of the following:
+'''subsystem''' may be one of the following:
 <<Include(SDL_SYSWM_TYPE, , , from="== Values ==", to="== Code Examples ==")>>
 
+There are currently no Cocoa window events.
 
 ----
 [[CategoryStruct]], [[CategorySWM]]
