--- a/SDL_SoftStretch.mediawiki
+++ b/SDL_SoftStretch.mediawiki
@@ -15,20 +15,21 @@ int SDL_SoftStretch(SDL_Surface*    src,
 ```
 
 == Function Parameters ==
-<<Color2(green,How is const SDL_Rect* different from SDL_Rect*?)>>
 {|
 |'''src'''
-|a pointer to the source surface / [[SDL_Surface]] containing '''srcrect'''
+|a pointer to the [[SDL_Surface]] containing '''srcrect'''
 |-
 |'''srcrect'''
-|a pointer to the source rectangle / [[SDL_Rect]] to be queried
+|the [[SDL_Rect]] to be stretched
 |-
 |'''dst'''
-|a pointer to the destination surface / [[SDL_Surface]] containing '''dstrect'''
+|a pointer to the [[SDL_Surface]] containing '''dstrect'''
 |-
 |'''dstrect'''
-|a pointer to the destination rectangle / [[SDL_Rect]] to be filled
+|the [[SDL_Rect]] containing the output parameters
 |}
+
+<<Color2(green,How is dstrect the destination and also a const?  Does it just provide the parameters for the output but not hold the output?)>>
 
 == Return Value ==
 Returns 0 on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
@@ -39,7 +40,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-This function uses a static buffer, and is not thread-safe.
+This function uses a static buffer and is not thread-safe.
 
 == Related Functions ==
 
