--- a/SDL_SetClipRect.mediawiki
+++ b/SDL_SetClipRect.mediawiki
@@ -15,10 +15,10 @@ SDL_bool SDL_SetClipRect(SDL_Surface*    surface,
 == Function Parameters ==
 {|
 |'''surface'''
-|a pointer to the surface of type [[SDL_Surface]] to be updated
+|a pointer to the [[SDL_Surface]] to be clipped
 |-
 |'''rect'''
-|a pointer to a rectangle of type [[SDL_Rect]]'', or NULL for the entire render target''
+|the clipping [[SDL_Rect]]^, or NULL for the entire render target^
 |}
 
 == Return Value ==
