--- a/SDL_RenderDrawRects.mediawiki
+++ b/SDL_RenderDrawRects.mediawiki
@@ -14,7 +14,7 @@ int SDL_RenderDrawRects(const SDL_Rect** rects,
 == Function Parameters ==
 {|
 |'''rects'''
-|a pointer to an array of destination rectangles of type [[SDL_Rect]]
+|a pointer to an array of destination [[SDL_Rect]] structures
 |-
 |'''count'''
 |the number of rectangles
