--- a/SDL_DestroyWindow.mediawiki
+++ b/SDL_DestroyWindow.mediawiki
@@ -13,7 +13,7 @@ void SDL_DestroyWindow(SDL_Window* window)
 == Function Parameters ==
 {|
 |'''window'''
-|the window to destroy
+|the SDL_Window to destroy
 |}
 
 == Code Examples ==
