--- a/SDL_GetRenderDrawColor.mediawiki
+++ b/SDL_GetRenderDrawColor.mediawiki
@@ -16,16 +16,16 @@ int SDL_GetRenderDrawColor(Uint8* r,
 == Function Parameters ==
 {|
 |'''r'''
-|a pointer to the red value used to draw on the rendering target
+|the red value used to draw on the rendering target
 |-
 |'''g'''
-|a pointer to the green value used to draw on the rendering target
+|the green value used to draw on the rendering target
 |-
 |'''b'''
-|a pointer to the blue value used to draw on the rendering target
+|the blue value used to draw on the rendering target
 |-
 |'''a'''
-|a pointer to the alpha value used to draw on the rendering target; usually SDL_ALPHA_OPAQUE (255)
+|the alpha value used to draw on the rendering target; usually SDL_ALPHA_OPAQUE (255)
 |}
 
 == Return Value ==
