--- a/SDL_GetRendererInfo.mediawiki
+++ b/SDL_GetRendererInfo.mediawiki
@@ -14,7 +14,7 @@ int SDL_GetRendererInfo(SDL_RendererInfo* info)
 
 {|
 |'''info'''
-|a pointer to an [[SDL_RendererInfo]] structure filled with information about the current renderer
+|an [[SDL_RendererInfo]] structure filled with information about the current renderer
 |}
 
 == Return Value ==
