--- a/SDL_GetTextureBlendMode.mediawiki
+++ b/SDL_GetTextureBlendMode.mediawiki
@@ -14,7 +14,7 @@ int SDL_GetTextureBlendMode(SDL_Texture* texture,
 == Function Parameters ==
 {|
 |'''texture'''
-|the texture to query
+|the SDL_Texture to query
 |-
 |'''blendMode'''
 |a pointer filled in with the current [[SDL_BlendMode]]
