update content - pointers, struct

--- a/SDL_GetWindowFlags.mediawiki
+++ b/SDL_GetWindowFlags.mediawiki
@@ -13,7 +13,7 @@ Uint32 SDL_GetWindowFlags(SDL_Window* window)
 == Function Parameters ==
 {|
 |'''window'''
-|the window to query
+|the SDL_Window to query
 |}
 
 == Return Value ==
