--- a/SDL_GetWindowGrab.mediawiki
+++ b/SDL_GetWindowGrab.mediawiki
@@ -13,11 +13,11 @@ int SDL_GetWindowGrab(SDL_Window* window)
 == Function Parameters ==
 {|
 |'''window'''
-|the window to query
+|the SDL_Window to query
 |}
 
 == Return Value ==
-Returns 1 if input is grabbed and 0 otherwise.
+Returns 1 if input is grabbed, 0 otherwise.
 
 == Code Examples ==
 ```c++
