--- a/SDL_GetWindowID.mediawiki
+++ b/SDL_GetWindowID.mediawiki
@@ -13,7 +13,7 @@ Uint32 SDL_GetWindowID(SDL_Window* window)
 == Function Parameters ==
 {|
 |'''window'''
-|the window to query
+|the SDL_Window to query
 |}
 
 == Return Value ==
