--- a/SDL_GL_CreateContext.mediawiki
+++ b/SDL_GL_CreateContext.mediawiki
@@ -13,7 +13,7 @@ SDL_GLContext SDL_GL_CreateContext(SDL_Window* window)
 == Function Parameters ==
 {|
 |'''window'''
-|the window to associate with the context
+|the SDL_Window to associate with the context
 |}
 
 == Return Value ==
